# notion_plugin

./: .dockerignore  Dockerfile  Dockerfile.celery  Dockerfile.flask  app.py  collect_pages_for_removing.py  config.py  delete_this.py  docker-compose.yml  entrypoint.sh  flask_server.py  logging_settings.py  main.py  models.py  notion_tracking.py  parse_bookmarks.py  print_env.py  pyproject.toml
.github/workflows/: github-actions-demo.yml
backend/: db.py  models.py  schema.py  tasks.py  urls.py  views.py
backend/helpers/: collect_pages_for_removing.py  envs_tool.py  get_pages_updates.py  json_model.py  logger_settings.py  notion_tracking.py  parse_bookmarks.py
chrome_extension/: background_script.js
migrations/versions/: 124e2e1e1a28_.py
some_tests/unit_tests/: conftest.py  help_funcs_for_tests.py  test_collect_pages_for_removing.py
