[tool.poetry]
name = "notion_plugin"
version = "0.1.0"
description = ""
authors = ["HappyCthulhu <valeriyg98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
notion = "^0.0.28"
notifiers = "^1.2.1"
Flask-Cors = "^3.0.10"
Flask = "^2.0.1"
Flask-APScheduler = "^1.12.2"
python-dotenv = "^0.19.0"
pytest = "^6.2.4"
allure-pytest = "^2.9.43"
allure-python-commons = "^2.9.43"
pytest-env = "^0.6.2"
Flask-SQLAlchemy = "^2.5.1"
mimesis = "^5.2.1"
Flask-Migrate = "^3.1.0"
SQLAlchemy-Utils = "^0.38.2"
Flask-RESTful = "^0.3.9"
celery = "^5.2.3"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.0"
redis = "^4.1.4"
paramiko = "^2.10.3"
psycopg-binary = "^3.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
